as well as bugfix updates issued against those mainline releases.

For changes between beta versions, consult the BETA document. 

=============================================================================
			TinyMUSH 3.1 Changes
=============================================================================

TinyMUSH 3.1 beta 1 was released on May 8th, 2002.

-----------------------------------------------------------------------------

CHANGES TO THE BASE SERVER

- The licensing scheme has been changed to the Artistic License.

- A new script, Update, automatically downloads and applies official patches
  to TinyMUSH 3.

- The Backup, Restore, and Archive scripts can now look at a backups
  directory (set in mush.config). The default compression program is
  also now set in mush.config. Compression extensions are used
  correctly, and the bzip2 format is supported.

- The Startmush script handles KILLED and CRASH databases more elegantly.

- The Restore script can handle the archives produced by Archive.

- Dynamically loadable modules. There is now an interface for writing your
  own hardcode extensions to the server, and loading them at runtime.
  The comsys and mailer are now loadable modules; the USE_COMSYS and 
  USE_MAIL #ifdef's and the have_comsys and have_mailer conf directives
  are no longer needed.

- '@list memory' gives a breakdown of the memory used by various constructs.

- Many changes and improvements to caching.

  - Instead of starting the cache at some fixed width and depth, and
    growing the depth (but not the width) to whatever size is demanded by
    the game, which can cause "cache bloat" if a very large number of
    objects gets loaded into the cache as part of a single operation,
    the total size of the cache is fixed -- the amount of memory that
    the cached data takes cannot exceed a specified limit. This is
    configurable via the cache_size parameter.

  - Removal of elements from the cache is based on "least recently used"