@@ -1,5 +1,6 @@
 Do not edit this file. Correct operation of patches depends upon it.
-The current version is: TinyMUSH 3.1 beta 8
+The current version is: TinyMUSH 3.1 patchlevel 0
+
 
 
 
