@@ -8,6 +8,7 @@ For changes between beta versions, consult the BETA document.
 =============================================================================
 
 TinyMUSH 3.1 beta 1 was released on May 8th, 2002.
+The "full", gamma release of TinyMUSH 3.1 is dated February 12th, 2003.
 
 -----------------------------------------------------------------------------
 
@@ -450,6 +451,9 @@ CHANGES TO FUNCTIONS
   Idea from FiranMUX.
 
 - Added connrecord(), connected player record (as in WHO).
+
+- Added elockstr(), which evaluates a target against a lock string.
+  Idea from Joel Ricketts.
 
 - Added entrances() function, similar to @entrances command. Based on an
   idea from PennMUSH.
